// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallPulseRise> <BallPulseRise> Mount: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation-delay: 0;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.15,.46,.9,.6);
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: cubic-bezier(.15,.46,.9,.6);
}

.css-0 > div:nth-child(2n),
[data-css-0] > div:nth-child(2n) {
  animation-name: animation_1grmen5;
  -webkit-animation-name: animation_1grmen5;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-name: animation_l72o7p;
  -webkit-animation-name: animation_l72o7p;
}

<BallPulseRise
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</BallPulseRise>
`;

exports[`<BallPulseRise> <BallPulseRise> Render: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation-delay: 0;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.15,.46,.9,.6);
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: cubic-bezier(.15,.46,.9,.6);
}

.css-0 > div:nth-child(2n),
[data-css-0] > div:nth-child(2n) {
  animation-name: animation_1grmen5;
  -webkit-animation-name: animation_1grmen5;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-name: animation_l72o7p;
  -webkit-animation-name: animation_l72o7p;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallPulseRise> <BallPulseRise> Shallow: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation-delay: 0;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier(.15,.46,.9,.6);
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation-delay: 0;
  -webkit-animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: cubic-bezier(.15,.46,.9,.6);
}

.css-0 > div:nth-child(2n),
[data-css-0] > div:nth-child(2n) {
  animation-name: animation_1grmen5;
  -webkit-animation-name: animation_1grmen5;
}

.css-0 > div:nth-child(2n-1),
[data-css-0] > div:nth-child(2n-1) {
  animation-name: animation_l72o7p;
  -webkit-animation-name: animation_l72o7p;
}

<div
  data-css-0=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;
